--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <a class="header-link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </div>
   <div class="main-content">
-    <p id="add-task-wrapper">
+    <p id="add-task-wrap">
       <label for="new-task">Add Item</label>
-      <div class="task-row-wrapper">
+      <div class="task-row-wrap">
         <input id="new-task" class="task" type="text">
         <button>Add</button>
       </div>
@@ -32,7 +32,7 @@
         <label class="task">Go Shopping</label>
         <input type="text" value="Go Shopping" class="task">
         <button class="edit">Save</button>
-        <button class="delete"><img src="./remove.svg"></button>
+        <button class="del"><img src="./remove.svg"></button>
       </li>
     </ul>
     <h3>Completed</h3>
@@ -42,7 +42,7 @@
         <label class="task">See the Doctor</label>
         <input type="text" class="task">
         <button class="edit">Edit</button>
-        <button class="delete"><img src="./remove.svg"></button>
+        <button class="del"><img src="./remove.svg"></button>
       </li>
     </ul>
   </div>
