refactor: change some selectors according to 3.4 html-and-css.md

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <label class="task">Go Shopping</label>
         <input type="text" value="Go Shopping" class="task">
         <button class="edit">Save</button>
-        <button class="del"><img src="./remove.svg"></button>
+        <button class="delete"><img src="./remove.svg"></button>
       </li>
     </ul>
     <h3>Completed</h3>
@@ -42,7 +42,7 @@
         <label class="task">See the Doctor</label>
         <input type="text" class="task">
         <button class="edit">Edit</button>
-        <button class="del"><img src="./remove.svg"></button>
+        <button class="delete"><img src="./remove.svg"></button>
       </li>
     </ul>
   </div>
