--- a/index.html
+++ b/index.html
@@ -7,45 +7,45 @@
 </head>
 <body class="page">
   <header class="header">
-    <img src="./eisenhower-matrix.jpg" alt="Eisenhower matrix picture">
-    <a class="header-link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+    <img src="./eisenhower-matrix.jpg" alt="Eisenhower matrix picture" class="header__img">
+    <a class="header__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </header>
   <main class="main-content">
-    <section id="add-task-wrap">
-      <label for="new-task">Add Item</label>
-      <div class="task-row-wrap">
-        <input id="new-task" class="task" type="text">
-        <button>Add</button>
+    <section class="task-section task-section--add">
+      <h3 class="task-section__title">Add Item</h3>
+      <div class="add-task">
+        <input class="add-task__input input" type="text">
+        <button class="add-task__btn btn">Add</button>
       </div>
     </section>
-    <section class="todo-wrap">
-      <h3>Todo</h3>
-      <ul id="incomplete-tasks">
-        <li>
-          <input type="checkbox">
-          <label class="task">Pay Bills</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete"><img src="./remove.svg" alt="Remove task"></button>
+    <section class="task-section task-section__todo">
+      <h3 class="task-section__title">Todo</h3>
+      <ul class="task-list task-list--todo">
+        <li class="task-item">
+          <input type="checkbox"  class="task-item__checkbox checkbox">
+          <label class="task-item__label">Pay Bills</label>
+          <input type="text" class="task-item__input input">
+          <button class="task-item__edit-btn btn">Edit</button>
+          <button class="task-item__delete-btn btn"><img src="./remove.svg" alt="Remove task"></button>
         </li>
-        <li class="edit-mode">
-          <input type="checkbox">
-          <label class="task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task">
-          <button class="edit">Save</button>
-          <button class="delete"><img src="./remove.svg" alt="Remove task"></button>
+        <li class="task-item task-item--edit-mode">
+          <input type="checkbox"  class="task-item__checkbox checkbox">
+          <label class="task-item__label">New Task</label>
+          <input type="text" value="New Task" class="task-item__input input">
+          <button class="task-item__edit-btn btn">Save</button>
+          <button class="task-item__delete-btn btn"><img src="./remove.svg" alt="Remove task"></button>
         </li>
       </ul>
     </section>
-    <section class="completed-wrap">
-      <h3>Completed</h3>
-      <ul id="completed-tasks">
-        <li>
-          <input type="checkbox" checked>
-          <label class="task">See the Doctor</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete"><img src="./remove.svg" alt="Remove task"></button>
+    <section class="task-section">
+      <h3 class="task-section__title">Completed</h3>
+      <ul class="task-list task-list--completed">
+        <li class="task-item">
+          <input type="checkbox" class="task-item__checkbox checkbox" checked>
+          <label class="task-item__label">See the Doctor</label>
+          <input type="text" class="task-item__input input">
+          <button class="task-item__edit-btn btn">Edit</button>
+          <button class="task-item__delete-btn btn"><img src="./remove.svg" alt="Remove task"></button>
         </li>
       </ul>
     </section>
